# tvine

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Makefile  Makefile.toml  README.md  biome.json  index.html  install.sh  mockup.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.claude/skills/commit/: SKILL.md
.claude/skills/design-and-plan/: SKILL.md
.github/workflows/: backend.yml  frontend.yml  release.yml  tauri.yml
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs
crates/adapter/src/manage/: mod.rs
crates/adapter/src/prerequisite/: mod.rs
crates/adapter/src/repository/: git.rs  health.rs  mod.rs  pty.rs  session.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/handler/: health.rs  mod.rs  session.rs
crates/api/src/operator/: mod.rs
crates/channel/: Cargo.toml
crates/channel/src/: pty.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/git/: error.rs  mod.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  project_id.rs
crates/data/src/manage/: mod.rs  project.rs  session.rs
crates/exec/: Cargo.toml
crates/exec/src/exists/: mod.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/kernel/src/manage/: mod.rs
crates/kernel/src/model/: pty.rs  session.rs
crates/kernel/src/repository/: git.rs  health.rs  mod.rs  pty.rs  session.rs
crates/pty/: Cargo.toml
crates/pty/src/: error.rs  lib.rs  manager.rs  process.rs
crates/registry/: Cargo.toml
crates/registry/src/: app.rs  bootstrap.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  utility.rs
docs/claudeに出してもらったmvp/: docker-worktree-research.md  mockup-mvp.html
docs/claudeに出してもらった初期構想/: design-notes.md
docs/design/mvp/: Claude端末.md  ステータス管理.md  スロット管理.md  セッション一覧.md  セッション作成.md  セッション削除.md  ターミナル.md  ディレクトリ構成.md  データモデル.md  ユースケース.md  差分表示.md  概要.md  画面構成.md
docs/notes/mvp/: architecture.md  docker-strategy.md  installation.md
docs/notes/初期構想/: mockup.html
docs/plans/: 004-セッション作成.md  008-エラー型設計.md  009-プロジェクト初期化.md  014-Tauri起動時init.md  016-セッション作成モーダルとIPC.md  019-セッション作成実処理.md  023-セッション一覧と削除.md  025-Claude端末.md  026-ステータス管理-v2.md  040-スロット管理.md  todo.md  ガイド.md
src/: App.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/routes/: mod.rs  pty.rs  session.rs
src/app/: Layout.tsx
src/components/: BrailleSpinner.module.css  BrailleSpinner.tsx  CollapsiblePanel.tsx  ConfirmModal.tsx  Panel.tsx  SelectableCard.tsx
src/components/panel/: CollapsiblePanel.test.tsx  CollapsiblePanel.tsx  Panel.tsx  store.test.ts  store.ts
src/config/: queryKeys.ts
src/config/theme/: mantine.ts  tokens.ts
src/features/terminal/api/: resizePty.ts  (+2 more)
src/hooks/useSessionTerminal/: makeCreate.test.ts  makeCreate.ts  makeRemove.test.ts  makeRemove.ts  ptyActivityMonitor.test.ts  ptyActivityMonitor.ts  setupTerminal.ts  useSessionTerminal.test.tsx  useSessionTerminal.ts
src/stores/: sessionStore.ts  statusStore.ts  terminalStore.ts
(+30 files in other folders)
