[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/adapter",
  "crates/api",
  "crates/data",
  "crates/kernel",
  "crates/registry",
  "crates/shared",
  "crates/cli",
]

[workspace.dependencies]
# 内部クレート
adapter = { path = "./crates/adapter"}
api = { path = "./crates/api" }
data = { path = "./crates/data"}
kernel = { path = "./crates/kernel"}
registry = { path = "./crates/registry" }
shared = { path = "./crates/shared" }

# 外部依存
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.60", features = ["derive"]}
mockall = "0.14.0"
async-trait = "0.1.89"
derive-new = "0.7"
