[package]
name = "tvine"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tvine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true

api.workspace = true
client.workspace = true
data.workspace = true
kernel.workspace = true
pty.workspace = true
registry.workspace = true
shared.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
